<resources>

    <string name="app_name">移店通</string>
    <string name="app_logout">注销</string>
    <string name="app_cancel">取消</string>
    <string name="index_page">首页</string>
    <string name="delete">删除</string>
    <string name="app_init_error">初始化系统出现了问题，请稍后再试试.</string>
    <string name="app_signature">个性签名</string>
    <string name="app_change_user">切换用户</string>
    <string name="app_change_inst">切换机构</string>
    <string name="app_clean">清理缓存</string>
    <string name="app_pass">修改密码</string>
    <string name="app_click_again_exit">请再按一次退出程序</string>
    <string name="app_photo">我的相册</string>
    <string name="sys_exception_msg">很抱歉,程序出现异常,即将退出.</string>
    <string name="network_error">你的网络似乎有些问题，请检查一下网络设置。</string>
    <string name="action_settings">Settings</string>
    <string name="title_btn_return">返回</string>
    <string name="title">标题</string>
    <string name="beautiful">竞美</string>
    <string name="foundtitle">发现</string>
    <string name="addressbook">通讯录</string>
    <string name="login_pic_tip">请登录。</string>
    <string name="login_userno_textview">用户编号：</string>
    <string name="login_inst_textview">选择机构：</string>
    <string name="login_password_textview">密码：</string>
    <string name="login_link">连接</string>
    <string name="login_reset">重置</string>
    <string name="login_submit">登录</string>
    <string name="monistring">演示系统</string>
    <string name="manual">新手教程</string>
    <string name="login_userno_required">请输入用户编码。</string>
    <string name="login_instid_required">请选择机构。</string>
    <string name="login_password_required">请输入密码。</string>
    <string name="login_submit_error">登录失败，请检查用户编号和密码。</string>
    <string name="default_progress_dialog_msg">正在处理,请稍候......</string>
    <string name="common_loading">正加载,请稍后...</string>
    <string name="msgcard_item_user_name">李雷</string>
    <string name="msgcard_item_msg_subject">好好学习哦！</string>
    <string name="msgcard_item_msg_context">好好学习,天天向上!\n好好学习,天天向上!好好学习,天天向上!\n好好学习,天天向上!</string>
    <string name="msgcard_item_msg_time">12:30</string>
    <string name="msgcard_item_msg_device">iPhone 5s</string>
    <string name="msgcard_item_msg_from">来自</string>
    <string name="msgcard_title">消息详情</string>
    <string name="msgcard_new_title">写动态</string>
    <string name="msgcard_new_comment">新评论</string>
    <string name="edit_user_signature">编辑个性签名</string>
    <string name="edit_user_signature_hint">请输入你想要的个性签名</string>
    <string name="option">意见</string>
    <string name="success">成功</string>
    <string name="option_hint">填写你的审批意见...</string>
    <string name="option_notnull">你还没有输入你的意见呢。</string>
    <string name="msgcard_new_send">发布</string>
    <string name="msgcard_new_hint">分享您的新鲜事儿...</string>
    <string name="msgcard_new_notnull">你还没有输入要分享的内容呢。</string>
    <string name="msgcard_new_success">你分享的内容已经发送成功啦。</string>
    <string name="msgcard_new_failure">分享内容发送出现了点问题，请待会再试试。</string>

    <!-- Refresh -->
    <string name="p2refresh_head_load_more">加载更多</string>
    <string name="p2refresh_end_load_more">更    多</string>
    <string name="p2refresh_end_click_load_more">点击加载</string>
    <string name="p2refresh_release_refresh">松开立即刷新</string>
    <string name="p2refresh_pull_to_refresh">下拉刷新</string>
    <string name="p2refresh_doing_head_refresh">正在刷新&#8230;</string>
    <string name="p2refresh_doing_end_refresh">加载中&#8230;</string>
    <string name="p2refresh_refresh_lasttime">最近更新&#160;&#058;&#160;</string>
    <string name="hello">下拉可刷新 </string>
    <string name="refresh_down_text">下拉可刷新</string>
    <string name="refresh_release_text">松开可刷新</string>
    <string name="toast_text">ScrollView下拉刷新完毕</string>
    <string name="comment">评论</string>
    <string name="share">分享</string>
    <string name="like">赞</string>
    <string name="msgcard_item_msg_comment">评论内容</string>
    <string name="imageloader_pager_message">查看图片</string>
    <string name="descr_image">查看图片</string>
    <string name="maohao">：</string>
    <!-- 用户手册 -->
    <string name="muanel">新手教程</string>
    <!-- 联系人列表 -->
    <string name="selectText">选择</string>
    <string name="userinfo">用户</string>
    <string name="grouplistText">部门</string>
    <string name="search_input">搜索</string>
    <string name="tab1">用户</string>
    <string name="tab2">部门</string>
    <string name="adduser">添加用户</string>
    <string name="adddepartment">添加部门</string>
    <string name="choosedepartment">选择部门</string>
    <string name="chooseuser">添加用户</string>
    <string name="adduserto">添加到</string>
    <string name="adduerbyorg">通过组织结构添加</string>

    <!-- 相册、相机 -->
    <string name="pic_fragment_button">点击确定</string>
    <string name="back">返回</string>
    <string name="commit">确定</string>
    <string name="picHeader">图片选择</string>
    <string name="picNum">获取图片张数</string>
    <string name="cameraPic">相机照片</string>
    <string name="framlayout">framlayout</string>

    <!-- 用户详细信息 -->
    <string name="ucardinfo">个人资料</string>
    <string name="uname">姓名：</string>
    <string name="usex">性别：</string>
    <string name="usignature">个性签名：</string>
    <string name="udepartment">部门：</string>
    <string name="supdepartment">下级部门(0)</string>
    <string name="usergroup">成员(0)</string>
    <string name="departmentinfo">部门信息</string>

    <!-- 用户详细信息  联系方式 -->
    <string name="cweixin">微信：</string>
    <string name="cemail">电子邮件：</string>
    <string name="cphone">联系电话：</string>

    <!-- 修改密码 -->
    <string name="upw">修改密码</string>
    <string name="upw_mima1">原密码：</string>
    <string name="upw_mima2">新密码：</string>
    <string name="upw_mima3">再次输入新密码：</string>
    <string name="upw_message">请输入长度在6到15位之间的新密码,可以使用数字,字母,符号等。</string>
    <string name="upw_tishi1">提示1</string>
    <string name="upw_tishi2">提示2</string>
    <string name="upw_tishi3">提示3</string>

    <!-- 个人资料 -->
    <string name="headPic">头像</string>
    <string name="mName">姓名</string>
    <string name="addr">住址</string>
    <string name="email">邮箱</string>
    <string name="phone">联系方式</string>
    <string name="gender">性别</string>
    <string name="birthday">生日</string>
    <string name="signature">个性签名</string>
    <string name="newSignature">输入新的个性签名</string>
    <!-- 考勤模块 -->
    <string name="sign">考勤签到</string>
    <string name="mySignin">我的考勤</string>
    <string name="signClick">本日班次</string>
    <string name="commitSign">提交考勤签到</string>
    <string name="chesePic">获取头像方式</string>
    <string name="camer">拍照获取</string>
    <string name="album">从相册选择</string>
    <string name="netWorkPic">云相册</string>
    <string name="localPic">本地相册</string>
    <string name="noPic">你的相册还没有图片哦！\n快去本地上传吧</string>
    <!-- 话题 -->
    <string name="explain">选择</string>
    <string name="selectContent">输入你想查找的话题</string>
    <string name="complete">完成</string>
    <string name="begindate">开始时间</string>
    <string name="enddate">结束时间</string>

    <!-- 消息卡片分组 -->
    <string name="pending">待审核</string>
    <string name="frome_me">我的动态</string>
    <string name="sendtome">发给我的</string>
    <string name="commented">我评论的</string>
    <string name="top_topic">最热话题</string>
    <string name="forward">转发</string>

    <!-- 消息卡片评论 -->
    <string name="msgcard_comment_limitnum">评论内容超过%1$d字符。</string>

    <!-- 流程相关 -->
    <string name="bpm_add_node">+添加审批节点</string>
    <string name="bpm_add_node_t">添加审批节点</string>
    <string name="bpm_add_node_name">节点名称：</string>
    <string name="pls_choice_org">请选择组织</string>
    <string name="pls_choice_user">请选择审批人</string>
    <string name="pls_choice_org_tip">请选择组织：</string>
    <string name="pls_choice_user_tip">请选择审批人：</string>
    <string name="bpm_start_node">发布申请</string>
    <string name="bpm_option">审批意见</string>
    <string name="bpm_use_template">使用上次的配置</string>

    <!-- 考勤签到 -->
    <string name="setup">设置</string>
    <string name="username">姓名</string>
    <string name="shangban">上班</string>
    <string name="xiaban">下班</string>
    <string name="day">今天</string>

    <!-- 我的客户 -->
    <string name="mycustomer">我的客户</string>
    <string name="addcustomer">+</string>
    <string name="customername">客户简称：</string>
    <string name="customernamehint">公司简称</string>
    <string name="customerfullname">客户全称：</string>
    <string name="customerfullnamehint">公司全称</string>
    <string name="customercontact">联系人：</string>
    <string name="customercontacthint">公司联系人</string>
    <string name="customerphone">联系电话：</string>
    <string name="customerphonehint">手机，座机</string>
    <string name="customeraddress">地址：</string>
    <string name="customeraddresshint">公司地址</string>
    <string name="customerregion">区域：</string>
    <string name="customerregionhint">公司所属区域</string>
    <string name="customersource">来源：</string>
    <string name="customersourcehint">网络渠道，发单，客户推荐，同行介绍，市场合作</string>
    <string name="customertype">类型：</string>
    <string name="customertypehint">企业，个体经营者，自然人</string>
    <string name="customerindustry">行业：</string>
    <string name="customerindustryhint">公司经营行业</string>
    <string name="customercontactposition">联系人职位：</string>
    <string name="customercontactpositionhint">法人，老板，负责人，介绍人</string>
    <string name="customerproduct">购买商品</string>
    <string name="customerorder">查看客户订单</string>
    <string name="customerworkorder">查看客户工单</string>
    <string name="setupstate">变更状态</string>
    <string name="qianyue">已签约</string>
    <string name="alei">A</string>
    <string name="blei">B</string>
    <string name="clei">C</string>

    <!-- 服务订单 -->
    <string name="allorders">全部订单</string>
    <string name="nopanyment_order">待付款订单</string>
    <string name="no_submited_information_order">待提交资料订单</string>
    <string name="servicing_order">服务中订单</string>
    <string name="comment_order">待评价订单</string>
    <string name="complete_order">已完成订单</string>
    <string name="orderconnut">0</string>
    <string name="ordersubmit">提交订单</string>
    <string name="ordercomment">立即评价</string>
    <string name="orderlook">查看订单</string>
    <string name="orderpay">立即支付</string>

    <!-- 提交服务订单 -->
    <string name="submitordertishi">为使工商注册能够顺利进行，需提供如下资料</string>
    <string name="loadimage">上传图片</string>

    <!-- 订单支付 -->
    <string name="company_money">交易金额：</string>
    <string name="order_info">订单信息：</string>
    <string name="pay_way">支付方式：</string>
    <string name="zhifubao_text">支付宝</string>
    <string name="weizhifu_text">微支付</string>
    <string name="yinghangzhuanzhang_text">银行转账</string>
    <string name="xianjin_text">现金</string>
    <string name="houfukuan_text">后付款</string>
    <string name="xianjin_pay">支付金额：</string>

    <!-- 订单评论 -->
    <string name="service_product_name">服务产品：</string>
    <string name="commentservice">服务评价：</string>
    <string name="commenttishi">长度在10~100之间</string>
    <string name="commenttishi2">写下服务过程中得感受和体会，帮助继续改进我们的服务。</string>
    <string name="commenthit">写下您的评价</string>
    <string name="scorehit">1~10</string>

</resources>