<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="60dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/customername"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/customer_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/customernamehint"
            android:inputType="text"
            android:maxLength="15" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/customerfullname"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/customer_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/customerfullnamehint"
            android:inputType="text"
            android:maxLength="15" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/customercontact"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/customer_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/customercontacthint"
            android:inputType="text"
            android:maxLength="15" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/customercontactposition"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/customer_contactposition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/customercontactpositionhint"
            android:inputType="text"
            android:maxLength="15" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/customerphone"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/customer_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/customerphonehint"
            android:inputType="phone"
            android:maxLength="15" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/customeraddress"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/customer_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/customeraddresshint"
            android:inputType="text"
            android:maxLength="15" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/customerregion"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/customer_region"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/customerregionhint"
            android:inputType="text"
            android:maxLength="15" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/customersource"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/customer_source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/customersourcehint"
            android:inputType="text"
            android:maxLength="15" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/customertype"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/customer_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/customertypehint"
            android:inputType="text"
            android:maxLength="15" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/customerindustry"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/customer_industry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/customerindustryhint"
            android:inputType="text"
            android:maxLength="15" />
    </LinearLayout>

</ScrollView>