<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
     android:background="@android:color/white"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/title" >

       <ImageButton
            android:id="@+id/return_btn"
            style="@style/title_btn_return"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/app_name"
            android:paddingRight="40dp"
            android:src="@drawable/mini_webview_back" />

        <TextView
            android:id="@+id/title_txt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center_vertical"
            android:text="@string/upw"
            android:textSize="18sp"
            android:textStyle="bold" />
        
        <Button
           android:id="@+id/submitPassword"
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
           android:layout_alignParentRight="true"
           android:layout_marginRight="10dp"
           android:background="#00000000"
           android:text="@string/commit"
           android:textColor="@color/black"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.05dp"
        android:background="@color/devide_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_marginTop="60dp" >

        <com.yun9.mobile.roundimage.RoundImageView
            android:id="@+id/upw_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/login_pic_tip" />
        
  		<TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upw_message"
            android:layout_marginBottom="10dp" />
  
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upw_mima1" />

        <EditText
            android:id="@+id/upw_mima1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" 
            android:maxLength="15"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upw_mima2" />

        <EditText
            android:id="@+id/upw_xinmima1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" 
            android:maxLength="15"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upw_mima3" />

        <EditText
            android:id="@+id/upw_xinmima2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" 
            android:maxLength="15" />


    </LinearLayout>

</RelativeLayout>