<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yun9.mobile.sys.activity.DemoActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical"
        android:padding="10dp"
        android:paddingTop="10dp" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/login_pic_tip"
            android:src="@drawable/login" />

        <TextView
            android:id="@+id/loginUserNoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_userno_textview" />

        <EditText
            android:id="@+id/loginUserNoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:id="@+id/loginInstIdTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_inst_textview" />

        <EditText
            android:id="@+id/loginInstIdText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:id="@+id/loginPasswordTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_password_textview" />

        <EditText
            android:id="@+id/loginPasswordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/loginSubmitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_submit" />
    </LinearLayout>

</RelativeLayout>