<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@id/line"
        android:background="@color/title" >

        <ImageButton
            android:id="@+id/return_btn"
            style="@style/title_btn_return"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/app_name"
            android:paddingRight="40dp"
            android:src="@drawable/mini_webview_back" />

        <TextView
            android:id="@+id/title_txt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.05dp"
        android:background="@color/devide_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customercontact"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/customercontact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:textColor="@color/green"
                    android:textSize="18sp" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customerphone"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/customerphone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customeraddress"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/customeraddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/levelqian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone" >

            <Button
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/mine_item_background"
                android:text="@string/customerproduct"
                android:textColor="@color/blue"
                android:textSize="18sp" />

            <Button
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/mine_item_background"
                android:text="@string/customerorder"
                android:textColor="@color/blue"
                android:textSize="18sp" />

            <Button
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/mine_item_background"
                android:text="@string/customerworkorder"
                android:textColor="@color/blue"
                android:textSize="18sp" />
        </LinearLayout>

        <Button
            android:id="@+id/setupstate"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="@drawable/mine_item_background"
            android:text="@string/setupstate"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/levelvalue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone" >

            <RadioGroup
                android:id="@+id/level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/qianyue"
                    android:text="@string/qianyue" />

                <RadioButton
                    android:id="@+id/alei"
                    android:text="@string/alei" />

                <RadioButton
                    android:id="@+id/blei"
                    android:text="@string/blei" />

                <RadioButton
                    android:id="@+id/clei"
                    android:text="@string/clei" />
            </RadioGroup>

            <Button
                android:id="@+id/commit"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:background="@drawable/mine_item_background"
                android:text="@string/commit"
                android:textColor="@color/blue"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>